--- a/node/package.json
+++ b/node/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "start": "node --watch server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3"
   }
 }
