--- a/node/package.json
+++ b/node/package.json
@@ -2,7 +2,7 @@
   "name": "cognosexpressapi",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "server.js",
   "scripts": {
     "start": "node --watch server",
     "test": "echo \"Error: no test specified\" && exit 1"
